feat: justificar texto dos artigos na página principal

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -52,6 +52,7 @@ article {
   font-family: 'Inter', sans-serif;
   font-size: 1.6rem;
   font-weight: 400;
+  text-align: justify;
   background-color: #FFFFFF;
 }
 
