--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -102,7 +102,7 @@ hr {
 
 .img-container {
   align-self: center;
-  margin: 2rem 0;
+  margin: 2rem auto;
   max-width: 500px;
   text-align: center;
 }
